<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/amber"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    >
    <TextView
        style="@style/TitleText"
        android:text="@string/section_c"
        android:textAllCaps="true"
        />
    <!--Q17-->
    <TextView
        style="@style/NormalText"
        android:text="@string/Q_17"
        />
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <RadioButton
            android:id="@+id/workingRadioYesRb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            />
        <RadioButton
            android:id="@+id/workingRadioNoRb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no"
            />
    </RadioGroup>
    <!--Q18-->
    <TextView
        style="@style/NormalText"
        android:text="@string/Q_18"
        />
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <RadioButton
            android:id="@+id/listenAgriProgramLatMonthYesRb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            />
        <RadioButton
            android:id="@+id/listenAgriProgramLatMonthNoRb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no"
            />
    </RadioGroup>
    <!--Q19-->
    <TextView
        style="@style/NormalText"
        android:text="@string/Q_19"
        />

    <Spinner
        android:id="@+id/howOftenListeningRadioS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/frequency"
        />
    <!--Q20-->
    <TextView
        style="@style/NormalText"
        android:text="@string/Q_20"
        />
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <RadioButton
            android:id="@+id/timingOfBroadcastingAgriRadioYesRb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            />
        <RadioButton
            android:id="@+id/timingOfBroadcastingAgriRadioNoRb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no"
            />
    </RadioGroup>
    <!--Q21 -->
    <TextView
        style="@style/NormalText"
        android:text="@string/Q_21"
        />
    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:minWidth="220dp">
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <TextView style="@style/NormalText"
                android:text="@string/sun"
                android:layout_weight="2"
                />
            <TextView style="@style/NormalText"
                android:text="@string/radio_program_1"
                android:layout_weight="3"
                />
            <CheckBox
                android:id="@+id/radioProgram1Cb"
                android:layout_weight="1"
                />
            <Spinner
                android:id="@+id/radioProgram1S"
                android:entries="@array/frequency"
                android:layout_weight="3"
                />
        </TableRow>
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <TextView style="@style/NormalText"
                android:text="@string/mon"
                android:layout_weight="2"
                />
            <TextView style="@style/NormalText"
                android:text="@string/radio_program_2"
                android:layout_weight="3"
                />
            <CheckBox
                android:id="@+id/radioProgram2Cb"
                android:layout_weight="1"
                />
            <Spinner
                android:id="@+id/radioProgram2S"
                android:entries="@array/frequency"
                android:layout_weight="3"
                />
        </TableRow>
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <TextView style="@style/NormalText"
                android:text="@string/tue"
                android:layout_weight="2"
                />
            <TextView style="@style/NormalText"
                android:text="@string/radio_program_3"
                android:layout_weight="3"
                />
            <CheckBox
                android:id="@+id/radioProgram3Cb"
                android:layout_weight="1"
                />
            <Spinner
                android:id="@+id/radioProgram3S"
                android:entries="@array/frequency"
                android:layout_weight="3"
                />
        </TableRow>
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <TextView style="@style/NormalText"
                android:text="@string/wed"
                android:layout_weight="2"
                />
            <TextView style="@style/NormalText"
                android:text="@string/radio_program_4"
                android:layout_weight="3"
                />
            <CheckBox
                android:id="@+id/radioProgram4Cb"
                android:layout_weight="1"
                />
            <Spinner
                android:id="@+id/radioProgram4S"
                android:layout_weight="3"
                android:entries="@array/frequency"
                />
        </TableRow>
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <TextView style="@style/NormalText"
                android:text="@string/thu"
                android:layout_weight="2"
                />
            <TextView style="@style/NormalText"
                android:text="@string/radio_program_5"
                android:layout_weight="3"
                />
            <CheckBox
                android:id="@+id/radioProgram5Cb"
                android:layout_weight="1"
                />
            <Spinner
                android:id="@+id/radioProgram5S"
                android:entries="@array/frequency"
                android:layout_weight="3"
                />
        </TableRow>
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <TextView style="@style/NormalText"
                android:text="@string/fri"
                android:layout_weight="2"
                />
            <TextView style="@style/NormalText"
                android:text="@string/radio_program_6"
                android:layout_weight="3"
                />
            <CheckBox
                android:id="@+id/radioProgram6Cb"
                android:layout_weight="1"
                />
            <Spinner
                android:id="@+id/radioProgram6S"
                android:entries="@array/frequency"
                android:layout_weight="3"
                />
        </TableRow>
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <TextView style="@style/NormalText"
                android:text="@string/sat"
                android:layout_weight="2"
                />
            <TextView style="@style/NormalText"
                android:text="@string/radio_program_7"
                android:layout_weight="3"
                />
            <CheckBox
                android:id="@+id/radioProgram7Cb"
                android:layout_weight="1"
                />
            <Spinner
                android:id="@+id/radioProgram7S"
                android:entries="@array/frequency"
                android:layout_weight="3"
                />
        </TableRow>

    </TableLayout>
    <!--Q22-->
    <TextView
        style="@style/NormalText"
        android:text="@string/Q_22"
        />
    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:minWidth="220dp">
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <CheckBox
                android:id="@+id/radioProgramType1"
                android:text="@string/program_type_1"
                />
            <CheckBox
                android:id="@+id/radioProgramType2"
                android:text="@string/program_type_2"
                />
        </TableRow>
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <CheckBox
                android:id="@+id/radioProgramType3"
                android:text="@string/program_type_3"
                />
            <CheckBox
                android:id="@+id/radioProgramType4"
                android:text="@string/program_type_4"
                />
        </TableRow>
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <CheckBox
                android:id="@+id/radioProgramType5"
                android:text="@string/program_type_5"
                />
            <CheckBox
                android:id="@+id/radioProgramTyp6"
                android:text="@string/program_type_6"
                />
        </TableRow>
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <CheckBox
                android:id="@+id/radioProgramType7"
                android:text="@string/program_type_7"
                />
            <CheckBox
                android:id="@+id/radioProgramType8"
                android:text="@string/program_type_8"
                />
        </TableRow>
    </TableLayout>
    <EditText
        android:id="@+id/radioProgramTypeOtherEt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/specify_if_others"
        android:minWidth="180dp"
        />

    <!--Q23-->
    <TextView
        style="@style/NormalText"
        android:text="@string/Q_23"
        />
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <RadioButton
            android:id="@+id/radioDiscussMaterialYesRb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            />
        <RadioButton
            android:id="@+id/radioDiscussMaterialNoRb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no"
            />
    </RadioGroup>
    <!--Q24-->
    <TextView
        style="@style/NormalText"
        android:text="@string/Q_24"
        />

    <Spinner
        android:id="@+id/radioQualityOfS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/quality_of_service"
        />
    <!--Q25-->
    <TextView
        style="@style/NormalText"
        android:text="@string/Q_25"
        />

    <Spinner
        android:id="@+id/radioSatisfyContentS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/quality_of_service"
        />
    <!--Q26-->
    <TextView
        style="@style/NormalText"
        android:text="@string/Q_26"
        />
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <RadioButton
            android:id="@+id/radioNewTechYesRb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            />
        <RadioButton
            android:id="@+id/radioNewTechNoRb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no"
            />
    </RadioGroup>

    <!--Q27-->
    <TextView
        style="@style/NormalText"
        android:text="@string/Q_27"
        />
    <Spinner
        android:id="@+id/radioRelevantS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/relevant"
        />

    <!--Q28-->
    <TextView
        style="@style/NormalText"
        android:text="@string/Q_28"
        />
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <RadioButton
            android:id="@+id/radioRegionalBroadcastYesRb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            />
        <RadioButton
            android:id="@+id/radioRegionalBroadcastNoRb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no"
            />
    </RadioGroup>

    <!--Q29-->
    <TextView
        style="@style/NormalText"
        android:text="@string/Q_29"
        />
    <Spinner
        android:id="@+id/radioLanguageClearS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/language_clarity"
        />

    <!--Q30-->
    <TextView
        style="@style/NormalText"
        android:text="@string/Q_30"
        />
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <RadioButton
            android:id="@+id/radioProgramAppropriateYesRb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            />
        <RadioButton
            android:id="@+id/radioProgramAppropriateNoRb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no"
            />
    </RadioGroup>

    <!--Q31-->
    <TextView
        style="@style/NormalText"
        android:text="@string/Q_31"
        />
    <Spinner
        android:id="@+id/radioTimingPrefS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/program_timing"
        />

    <!--Q32-->
    <TextView
        style="@style/NormalText"
        android:text="@string/Q_32"
        />
    <Spinner
        android:id="@+id/radioNoListeningProgramS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/why_no_listening_radio_program"
        />

    <!--Q33-->
    <TextView
        style="@style/NormalText"
        android:text="@string/Q_33"
        />
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <RadioButton
            android:id="@+id/radioReviseProgramYesRb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            />
        <RadioButton
            android:id="@+id/radioReviseProgramNoRb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no"
            />
    </RadioGroup>

    <!--Q32-->
    <TextView
        style="@style/NormalText"
        android:text="@string/Q_34"
        />
    <EditText
        android:id="@+id/radioImprovementTipsEt"
        android:layout_width="match_parent"
        android:minHeight="50dp"
        android:layout_height="wrap_content"
        />
</LinearLayout>